# atividade1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Untitled-1.ipynb  arxiv_cs_ai_articles.csv  dados_artigos_ai.csv  get_floods.py  pyproject.toml
scripts/: tests.py
src/: ai_scrapper.py  dataclass.py  iti_scrapper.py  logger.py  new_Scrapper  testing  utils.py  web_scrapper.py
src/scrapping/: crawler_floods.py
src/templates/: dataclass.py
